--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   max-width: 700px;
   margin: 5rem auto;
   padding: 0 1rem;
   line-height: 1.6;
   color: #111;
   background: #fff;
+  text-align: center;
 }
 
 main {
@@ -13,26 +14,12 @@ main {
 }
 
 h1 {
-  font-size: 2rem;
-  margin-bottom: 0.25rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
 }
 
-em {
-  font-weight: 600;
-  color: #555;
-}
-
-a {
-  color: #0657d5;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.footer {
-  margin-top: 3rem;
-  font-size: 0.95rem;
-  color: #666;
+p {
+  font-size: 1.2rem;
+  color: #333;
 }
