--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 body {
   font-family: "Times New Roman", Times, serif;
-  max-width: 700px;
-  margin: 5rem auto;
-  padding: 0 1rem;
-  line-height: 1.6;
-  color: #111;
-  background: #fff;
+  background: #ffffff;
+  color: #111111;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 main {
-  font-size: 18px;
+  max-width: 720px;
+  margin: 6rem auto;
+  padding: 0 1.5rem;
 }
 
 h1 {
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 2rem;
+  letter-spacing: 0.02em;
 }
 
 p {
   font-size: 1.2rem;
-  color: #333;
+  line-height: 1.75;
+  font-weight: 400;
+  text-align: justify;
 }
